template/820_myArray_out.txt
template$ g++ 840_complexcls.cpp 820_myArray.cpp
In file included from 820_myArray.cpp:4:
840_complexcls.h:6:7: error: redefinition of ‘class complexCls’
    6 | class complexCls{
      |       ^~~~~~~~~~
In file included from 820_myArray.cpp:3:
840_complexcls.h:6:7: note: previous definition of ‘class complexCls’
    6 | class complexCls{
      |       ^~~~~~~~~~
template$ 
